[package]
name = "demand-easy-sv2"
version = "0.6.0"
edition = "2021"
description = "abc"
license = "MIT OR Apache-2.0"


[dependencies]
tokio = {version="1.36.0",features = ["full","tracing"]}
stratum-common = { version="1.0.0" }
roles_logic_sv2 = { git = "https://github.com/demand-open-source/stratum", branch = "ImproveCoinbase", subdirectory = "protocols/v2/roles-logic-sv2" }
const_sv2 = { version="2.0.0"}
binary_sv2 = { git = "https://github.com/demand-open-source/stratum", branch ="ImproveCoinbase",subdirectory = "protocols/v2/binary_sv2"}
demand-sv2-connection = {git = "https://github.com/demand-open-source/demand-sv2-connection"}
codec_sv2 = { git = "https://github.com/demand-open-source/stratum", branch="ImproveCoinbase",subdirectory = "protocols/v2/codec-sv2", features = ["noise_sv2","with_buffer_pool"]}
key-utils = { version="1.1.0"}

[features]
with_serde = ["binary_sv2/with_serde", "roles_logic_sv2/with_serde", "codec_sv2/with_serde"]
